--- a/configs/training_config_seed_sweep.json
+++ b/configs/training_config_seed_sweep.json
@@ -3,7 +3,8 @@
     "learning_rate": 1e-3,
     "batch_size": 32,
     "data_shuffle": true,
-    "epochs": 40,
+    "epochs": 5,
     "progress": true,
-    "subset_dataset": [false, 0]
+    "subset_dataset": [false, 0],
+    "nb_random_seeds": 20
 }
