--- a/configs/training_config_baseline.json
+++ b/configs/training_config_baseline.json
@@ -1,11 +1,11 @@
 {   
-    "dataset": "gymnasium-ActorCritic-LunarLander-2000-16-os.pt",
-    "learning_rate": 0.0005,
+    "dataset": "gymnasium-ActorCritic-LunarLander-1000-14-os.pt",
+    "learning_rate": 0.00027586588707427485,
     "batch_size": 64,
     "data_shuffle": true,
-    "epochs": 25,
+    "epochs": 45,
     "progress": true,
     "subset_dataset": [false, 0],
-    "epoch_eval": true,
-    "eval_dataset": "evaluation-gymnasium-ActorCritic-LunarLander-100-16-os.pt"
+    "epoch_eval": false,
+    "eval_dataset": "evaluation-gymnasium-ActorCritic-LunarLander-100-14-os.pt"
 }
